@@ -1,3 +1,5 @@
+- Refactor: Cleanup lessons, spaces and occupations code
+
 40.3.4 (30-01-2023)
 - Improvement: Change description of 'Not Approved' enrolment state 
 - Improvement: Made compatible with new access control API
